fixed tos page overflow issue

--- a/app/auth/properties/[property_id]/usage/_Components/ChartSelector/Components/Header/style.module.scss
+++ b/app/auth/properties/[property_id]/usage/_Components/ChartSelector/Components/Header/style.module.scss
@@ -4,7 +4,8 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
-
+    z-index: 1;
+    
     div{
         display: flex;
         gap: 0.5rem;
