--- a/app/auth/properties/[property_id]/usage/_Components/ChartSelector/style.module.scss
+++ b/app/auth/properties/[property_id]/usage/_Components/ChartSelector/style.module.scss
@@ -2,4 +2,5 @@
     display: flex;
     flex-flow: column;
     gap: 0.5rem;
+    z-index: 1;
 }
