--- a/components/Page/style.module.scss
+++ b/components/Page/style.module.scss
@@ -12,7 +12,7 @@
     background-attachment: fixed;
     padding: 1rem 10vw 0 10vw;
 
-    h1{
+    h1, h2, p, span{
         z-index: 1;
     }
 }
